# getPaperAgent

./: .gitignore  README.md  README_PY.md  package-lock.json  package.json  pyproject.toml  request.sample.json  requirements.txt
src/: index.js
src/core/: intake.js  paper.js
src/render/: pdf.js  template.js
src_py/exam_agent/: api.py  chain.py  db_store.py  io_utils.py  main.py  mcp_wrapper.py  models.py  nlp_parse.py  paper_logic.py  rendering.py  serve.py  session_utils.py
src_py/exam_agent/config/: blueprint_new_gaokao.json  intake_schema.json
src_py/exam_agent/web/: index.html
