[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-exam-agent"
version = "0.1.0"
description = "Math exam paper agent built with Python + LangChain"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.2.14",
  "langchain-core>=0.2.33",
  "pydantic>=2.8.2",
  "playwright>=1.46.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "psycopg2-binary>=2.9.9",
  "mcp>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src_py"}

[tool.setuptools.packages.find]
where = ["src_py"]
